@@ -2,10 +2,19 @@ package com.safefoodtruck.sft.notification.service;
 
 import static com.safefoodtruck.sft.common.util.EventType.*;
 
+import com.safefoodtruck.sft.globalnotification.dto.LiveEndNotificationDto;
+import java.util.Comparator;
+import java.util.List;
+
+import org.modelmapper.ModelMapper;
+import org.springframework.scheduling.annotation.Async;
+import org.springframework.scheduling.annotation.EnableAsync;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
 import com.safefoodtruck.sft.favorites.domain.Favorites;
 import com.safefoodtruck.sft.favorites.repository.FavoritesRepository;
 import com.safefoodtruck.sft.globalnotification.dto.AcceptedNotificationDto;
-import com.safefoodtruck.sft.globalnotification.dto.ChangeNoticeNotificationDto;
 import com.safefoodtruck.sft.globalnotification.dto.CompletedNotificationDto;
 import com.safefoodtruck.sft.globalnotification.dto.FavoriteNotificationDto;
 import com.safefoodtruck.sft.globalnotification.dto.LiveStartNotificationDto;
@@ -14,6 +23,7 @@ import com.safefoodtruck.sft.globalnotification.dto.RegistReviewNotificationDto;
 import com.safefoodtruck.sft.globalnotification.dto.RejcetedNotificationDto;
 import com.safefoodtruck.sft.globalnotification.service.GlobalNotificationService;
 import com.safefoodtruck.sft.member.domain.Member;
+import com.safefoodtruck.sft.member.exception.NotFoundMemberException;
 import com.safefoodtruck.sft.member.repository.MemberRepository;
 import com.safefoodtruck.sft.notification.domain.Notification;
 import com.safefoodtruck.sft.notification.dto.SelectNotificationResponseDto;
@@ -23,16 +33,9 @@ import com.safefoodtruck.sft.notification.exception.NotSameUserException;
 import com.safefoodtruck.sft.notification.repository.NotificationRepository;
 import com.safefoodtruck.sft.store.exception.StoreNotFoundException;
 import com.safefoodtruck.sft.store.repository.StoreRepository;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
+
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.modelmapper.ModelMapper;
-import org.springframework.scheduling.annotation.Async;
-import org.springframework.scheduling.annotation.EnableAsync;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
@@ -48,10 +51,12 @@ public class NotificationServiceImpl implements NotificationService {
     private final FavoritesRepository favoritesRepository;
     private final StoreRepository storeRepository;
 
+    @Transactional
     @Override
     public void sendNotification(SendNotificationRequestDto sendNotificationRequestDto) {
         String targetEmail = sendNotificationRequestDto.getTargetEmail();
-        Member member = memberRepository.findByEmail(targetEmail);
+        Member member = memberRepository.findByEmail(targetEmail).orElseThrow(
+            NotFoundMemberException::new);
 
         notificationRepository.save(Notification.builder()
             .member(member)
@@ -63,15 +68,16 @@ public class NotificationServiceImpl implements NotificationService {
     @Override
     @Transactional
     public List<SelectNotificationResponseDto> selectNotifications(String userEmail) {
-        Member member = memberRepository.findByEmail(userEmail);
+        Member member = memberRepository.findByEmail(userEmail).orElseThrow(
+            NotFoundMemberException::new);
         return member.getNotificationList().stream()
+            .sorted(Comparator.comparing(Notification::getTimestamp).reversed())
             .map(notification -> {
                 SelectNotificationResponseDto dto = modelMapper.map(notification,
                     SelectNotificationResponseDto.class);
                 dto.setEmail(notification.getMember().getEmail());
                 return dto;
-            })
-            .collect(Collectors.toList());
+            }).toList();
     }
 
     @Override
@@ -101,7 +107,7 @@ public class NotificationServiceImpl implements NotificationService {
                 .build());
 
             globalNotificationService.sendToClient(targetEmail,
-                new FavoriteNotificationDto(storeName), "open", CUSTOMER.getEventType());
+                new FavoriteNotificationDto(storeName, storeId), "open", OPEN.getEventType());
         }
     }
 
@@ -109,7 +115,8 @@ public class NotificationServiceImpl implements NotificationService {
     @Transactional
     @Override
     public void acceptedSendNotify(String orderEmail, String storeName, Integer orderId) {
-        Member member = memberRepository.findByEmail(orderEmail);
+        Member member = memberRepository.findByEmail(orderEmail).orElseThrow(
+            NotFoundMemberException::new);
         String info = storeName + " 푸드트럭에서 주문을 수락하였습니다.";
 
         notificationRepository.save(Notification.builder()
@@ -118,14 +125,15 @@ public class NotificationServiceImpl implements NotificationService {
             .build());
 
         globalNotificationService.sendToClient(orderEmail,
-            new AcceptedNotificationDto(storeName, orderId), "accepted", CUSTOMER.getEventType());
+            new AcceptedNotificationDto(storeName, orderId), "accepted", CUSTOMER_ORDER.getEventType());
     }
 
     @Async
     @Transactional
     @Override
-    public void rejectedSendNotify(String orderEmail, String storeName) {
-        Member member = memberRepository.findByEmail(orderEmail);
+    public void rejectedSendNotify(String orderEmail, String storeName, Integer orderId) {
+        Member member = memberRepository.findByEmail(orderEmail).orElseThrow(
+            NotFoundMemberException::new);
         String info = storeName + " 푸드트럭에서 주문을 거절하였습니다.";
 
         notificationRepository.save(Notification.builder()
@@ -134,14 +142,15 @@ public class NotificationServiceImpl implements NotificationService {
             .build());
 
         globalNotificationService.sendToClient(orderEmail,
-            new RejcetedNotificationDto(storeName), "rejected", CUSTOMER.getEventType());
+            new RejcetedNotificationDto(storeName, orderId), "rejected", CUSTOMER_ORDER.getEventType());
     }
 
     @Async
     @Transactional
     @Override
-    public void completedSendNotify(String orderEmail, String storeName) {
-        Member member = memberRepository.findByEmail(orderEmail);
+    public void completedSendNotify(String orderEmail, String storeName, Integer orderId) {
+        Member member = memberRepository.findByEmail(orderEmail).orElseThrow(
+            NotFoundMemberException::new);
         String info = storeName + " 푸드트럭에서 조리를 완료하였습니다.";
 
         notificationRepository.save(Notification.builder()
@@ -150,14 +159,14 @@ public class NotificationServiceImpl implements NotificationService {
             .build());
 
         globalNotificationService.sendToClient(orderEmail,
-            new CompletedNotificationDto(storeName), "completed", CUSTOMER.getEventType());
+            new CompletedNotificationDto(storeName, orderId), "completed", CUSTOMER_ORDER.getEventType());
     }
 
     @Async
     @Transactional
     @Override
     public void orderedSendNotify(String ownerEmail) {
-        Member member = memberRepository.findByEmail(ownerEmail);
+        Member member = memberRepository.findByEmail(ownerEmail).orElseThrow(NotFoundMemberException::new);
         String info = "주문이 접수되었어요!";
 
         notificationRepository.save(Notification.builder()
@@ -166,16 +175,7 @@ public class NotificationServiceImpl implements NotificationService {
             .build());
 
         globalNotificationService.sendToClient(ownerEmail,
-            new OrderedNotificationDto(), "ordered", OWNER.getEventType());
-    }
-
-    @Async
-    @Override
-    public void changedNoticeNotify(Set<String> connectedEmailList) {
-        for (String connectedEmail : connectedEmailList) {
-            globalNotificationService.sendToClient(connectedEmail,
-                new ChangeNoticeNotificationDto(), "changed", NOTICE.getEventType());
-        }
+            new OrderedNotificationDto(), "ordered", CREATE_ORDER.getEventType());
     }
 
     @Async
@@ -196,7 +196,21 @@ public class NotificationServiceImpl implements NotificationService {
                 .build());
 
             globalNotificationService.sendToClient(targetEmail,
-                new LiveStartNotificationDto(storeName, storeId), "live start", LIVE.getEventType());
+                new LiveStartNotificationDto(storeName, storeId), "live start", LIVE_START.getEventType());
+        }
+    }
+
+    @Override
+    public void liveEndNotify(Integer storeId) {
+        List<Favorites> favoriteList = favoritesRepository.findAllByStoreId(storeId);
+        String storeName = storeRepository.findById(storeId)
+            .orElseThrow(StoreNotFoundException::new).getName();
+        for (Favorites favorite : favoriteList) {
+            Member member = favorite.getMember();
+            String targetEmail = member.getEmail();
+
+            globalNotificationService.sendToClient(targetEmail,
+                new LiveEndNotificationDto(storeName, storeId), "live end", LIVE_END.getEventType());
         }
     }
 
@@ -204,7 +218,7 @@ public class NotificationServiceImpl implements NotificationService {
     @Transactional
     @Override
     public void registReviewNotify(String ownerEmail, Integer storeId) {
-        Member member = memberRepository.findByEmail(ownerEmail);
+        Member member = memberRepository.findByEmail(ownerEmail).orElseThrow();
         String info = "리뷰가 달렸어요!";
 
         notificationRepository.save(Notification.builder()
@@ -213,6 +227,6 @@ public class NotificationServiceImpl implements NotificationService {
             .build());
 
         globalNotificationService.sendToClient(ownerEmail,
-            new RegistReviewNotificationDto(storeId), "review", OWNER.getEventType());
+            new RegistReviewNotificationDto(storeId), "review", CREATE_REVIEW.getEventType());
     }
 }
